Michael adding content to Splash page

--- a/app/toolkit/_toolkit.html
+++ b/app/toolkit/_toolkit.html
@@ -3,7 +3,7 @@
 												class="md-accent"></md-progress-circular>
 </div>
 
-<article ng-if="!main.progress">
+<article ng-if="!main.progress" class="toolkit-view">
 	<header>
 		<h1 class="md-display-1">
 			{{ toolkit.content.title }}
