--- a/ng-index.html
+++ b/ng-index.html
@@ -28,7 +28,9 @@
 
   <div class="left-side">
     <header class="top-bar">
-      <div class="inner-content" layout="row" layout-align="space-between center">
+      <div class="inner-content"
+           layout="row" layout-align="space-between center">
+           
         <h3 class="md-subhead">
           <a href="#/html5/welcome">HTML5 Transition</a>
           <i ng-if="main.item">></i>
