--- a/app/splash/_splash.html
+++ b/app/splash/_splash.html
@@ -4,23 +4,106 @@
 												class="md-accent"></md-progress-circular>
 </div>
 
-<article ng-if="!main.progress" class="md-body-1">
+<article ng-if="!main.progress" class="splash-view md-body-1">
 	<header class="splash-header">
-		<h1 class="md-display-1">Splash header</h1>
+		<h1 class="md-display-1">
+      HTML5 Transition
+    </h1>
 	</header>
 
-	<md-tabs md-no-ink>
-    <md-tab ng-repeat="item in main.nav" label="{{ item['nav-label'] }}">
+	<md-tabs>
+    <md-tab label="Why adopt HTML5?">
       <md-tab-body class="md-body-1">
-        <header>
-					<h3 class="md-headline">
-						{{ item['nav-label'] }}
-					</h3>
-				</header>
-
 				<main>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="section" 
+               layout-gt-md="row" layout-align-gt-md="space-between start"
+               layout="column" layout-align="start start">
+
+  					<div class="masthead" flex-gt-md="65">
+              <img src="imgs/HTML5_masthead.jpg" border="0" />
+            </div>
+
+            <div class="copy" flex-gt-md="35">
+              <h2 class="md-title">
+                Time to switch
+              </h2>
+
+              <div class="text">
+                <p>HTML5 is becoming the industry standard for web technology. Publishers are migrating to HTML5 video players, browsers are introducing power saving plugins and mobile traffic, which only supports HTML5, is continually rising.</p>
+
+                <p>HTML5 is here to stay so make sure you don’t get left behind in this industry-wide revamp.</p>
+
+                <p>Make the switch today!</p>
+              </div>
+            </div>
+          </div>
 				</main>
+      </md-tab-body>
+    </md-tab>
+
+    <md-tab label="What's the big deal?">
+      <md-tab-body class="md-body-1">
+        <main>
+          <div class="text section">
+            <p>As publishers reduce the support of Flash and mobile impressions increase, many advertisers have seen a gradual growth in backup image rates for their campaigns. Along side this, many browsers have started to adopt ‘Power Saving’ plugins which pause any Flash content. Don't be scared, we're here to help!</p>
+
+            <p>Luckily, HTML5 navigates these issues and can help improve your advertising campaign’s performance by reducing the backup rate while delivering the same rich, interactive content as Flash.</p>
+
+            <p>HTML5 also creates the opportunity to extend the reach of your campaign. With the ever increasing prevalence of mobile traffic, unlike with Flash, HTML5 allows you to target your audience no matter their device.  Whether it be desktop, tablet or smartphones, with HTML5 your audience will always see the full advertising experience that you create.</p>
+          </div>
+        </main>
+      </md-tab-body>
+    </md-tab>
+
+    <md-tab label="Resources">
+      <md-tab-body class="md-body-1">
+        <main>
+          <div class="text section">
+            <p>We offer a wide variety of tools and support material to help you make the switch to HTML5 today:</p>
+
+            <ul>
+              <li>Google Web Designer; a powerful authoring tool which helps designers and developers to easily build creatives</li>
+              <li>Layouts; lets you quickly turn your static assets into interactive rich media units</li>
+              <li>Templates, Help Center and HTML5 Toolkit resources help you build HTML5 units from scratch</li>
+            </ul>
+
+            <p>If you feel brave enough you can use include of our TechLab solutions or deep dive into all the advanced available features at HTML5Rocks.com</p>
+          </div>
+
+          <div class="grid section" 
+               layout="column" layout-align="start start"
+               layout-gt-md="row" layout-align-gt-md="space-between start">
+
+            <md-card ng-repeat="item in splash.grid" flex-gt-md="50">
+              <a class="redirect" target="_blank" href="{{ item.link }}"
+                 layout="row" layout-align=" space-between center">
+
+                <div class="icon" flex="40">
+                  <img ng-src="imgs/{{ item.icon }}" border="0" />
+                </div>
+
+                <div class="snippet" flex="60">
+                  <h3 class="md-subhead">{{ item.title }}</h3>
+                  <span ng-bind-html="main.safeHtml(item.snippet)"></span>
+                </div>
+              </a>
+            </md-card>
+          </div>
+
+          <div class="section">
+            <h2 class="md-headline">
+              Additional Resources
+            </h2>
+
+            <p>
+              <img class="graph" src="imgs/line_graph.jpg" border="0" />
+            </p>
+
+            <p>
+              <img class="graph" src="imgs/bar_graph.jpg" border="0" />
+            </p>
+          </div>
+        </main>
       </md-tab-body>
     </md-tab>
   </md-tabs>
