--- a/app/toolkit/_toolkit.html
+++ b/app/toolkit/_toolkit.html
@@ -1,136 +1,144 @@
-<div class="progress-circle" ng-if="main.progress">
-	<md-progress-circular md-mode="indeterminate"
-												class="md-accent"></md-progress-circular>
-</div>
-
-<article ng-if="!main.progress" class="toolkit-view">
+<section>
 	<header>
 		<h1 class="md-display-1">
 			{{ toolkit.content.title }}
 		</h1>
+	</header>
 
-		<md-list class="tags" layout="row" layout-align="start center" 
-						 ng-if="toolkit.content.tags">
+	<main>
+		<ul class="no-style tags" layout="row" layout-align="start center" 
+				ng-if="toolkit.content.tags">
 
-			<md-list-item class="md-body-1" ng-repeat="tag in toolkit.content.tags">
+			<li class="md-caption" ng-repeat="tag in toolkit.content.tags">
 				<ng-md-icon icon="label" size="24" ng-if="$first"></ng-md-icon>
 				<span ng-if="!$first">{{ tag }}</span>
-			</md-list-item>
-		</md-list> <!-- tags -->
-	</header> <!-- title -->
+			</li>
+		</ul>
+	</main>
+</section> <!-- title -->
 
-	<section class="summary" ng-if="toolkit.content.description">
-		<header>
-			<h3 class="md-headline">
-				Summary
-			</h3>
-		</header>
+<section class="summary" ng-if="toolkit.content.description">
+	<header>
+		<h3 class="md-subhead">
+			Summary
+		</h3>
+	</header>
 
-		<main>
-			<p class="md-body-1" ng-bind-html="main.safeHtml(toolkit.content.description)"></p>
-		</main>
-	</section> <!-- description -->
+	<main>
+		<p class="md-body-1" 
+			 ng-bind-html="main.safeHtml(toolkit.content.description)"></p>
+	</main>
+</section> <!-- description -->
 
-	<section class="demo block-color accent" ng-if="toolkit.content.demo[0].title">
-		<header>
-			<h3 class="md-headline">
-				Demo
-			</h3>
-		</header>
+<section class="demo block-color primary" ng-if="toolkit.content.demo[0].title">
+	<header>
+		<h3 class="md-subhead">
+			Demo
+		</h3>
+	</header>
 
-		<main>
-			<md-list>
-				<md-list-item ng-repeat="demo in toolkit.content.demo">
-					<h4 class="md-subhead">
-						<a href="{{ demo.link.url }}" target="_blank"
-							 layout="row" layout-align="start start">
-							{{ demo.title }}
-							<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
-						</a>
-					</h4>
+	<main>
+		<ul class="no-style">
+			<li ng-repeat="demo in toolkit.content.demo">
+				<h4 class="md-subhead">
+					<a href="{{ demo.link.url }}" target="_blank"
+						 layout="row" layout-align="start start">
 
-					<p class="md-body-1" ng-bind-html="main.safeHtml(demo.description)"></p>
-				</md-list-item>
-			</md-list>
-		</main>
-	</section> <!-- demo -->
-
-	<section class="quick-start block-color primary-2"
-					 ng-if="toolkit.content['quick-start'][0].description">
-		<header>
-			<h3 class="md-headline">
-				Quick start
-			</h3>
-		</header>
-
-		<main>
-			<md-list>
-				<md-list-item ng-repeat="quick in toolkit.content['quick-start']" 
-											layout="row" layout-align:"start start">
-					<h1 class="md-display-1 numeral">
-						{{ $index + 1 }}
-					</h1>
-
-					<div>
-						<p>
-							<md-button href="{{ quick.link.url }}" 
-												 target="_blank" 
-												 class="md-primary"
-												 layout="row" layout-align="start center"
-												 md-no-ink>
-								{{ quick.link.title }}
-								<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
-							</md-button>
-						</p>
-
-						<p class="md-body-1" ng-bind-html="main.safeHtml(quick.description)"></p>
-					</div>
-				</md-list-item>
-			</md-list>
-		</main>
-	</section> <!-- quick start -->
-
-	<section class="pro-tips" ng-if="toolkit.content['pro-tips'][0].description">
-		<header>
-			<h3 class="md-headline">
-				Pro tips
-			</h3>
-		</header>
-
-		<main>
-			<md-list>
-				<md-list-item ng-repeat="tip in toolkit.content['pro-tips'] | orderBy:'-type'">
-					<div class="block" 
-							 ng-class="{good: tip.type == 'good', bad: tip.type == 'bad'}"
-							 layout-sm="column" layout-align-sm="center center"
-							 layout="row" layout-align="start center">
-						<span>
-							<ng-md-icon icon="check" size="24" ng-if="tip.type == 'good'"></ng-md-icon>
-							<ng-md-icon icon="close" size="24" ng-if="tip.type == 'bad'"></ng-md-icon>
-						</span> 
-						<p class="md-body-1" ng-bind-html="main.safeHtml(tip.description)"></p>
-					</div>
-				</md-list-item>
-			</md-list>
-		</main>
-	</section> <!-- pro tips -->
-
-	<footer ng-if="toolkit.content.links[0].title">
-		<header>
-			<h4 class="md-subhead" layout="row" layout-align="start center">
-				Helpful links
-				<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
-			</h4>
-		</header>
-
-		<main class="links md-body-1">
-			<md-list ng-repeat="link in toolkit.content.links">
-				<md-list-item>
-					<a href="{{ link.url }}" target="_blank">
-						{{ link.title }}
+						{{ demo.title }}
+						<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
 					</a>
-				</md-list-item>
-			</md-list> <!-- links -->
-		</main>
-	</footer>
-</article>
+				</h4>
+
+				<p class="md-body-1" ng-bind-html="main.safeHtml(demo.description)"></p>
+			</li>
+		</ul>
+	</main>
+</section> <!-- demo -->
+
+<section class="quick-start block-color accent"
+				 ng-if="toolkit.content['quick-start'][0].description">
+
+	<header>
+		<h3 class="md-subhead">
+			Quick start
+		</h3>
+	</header>
+
+	<main>
+		<ul class="no-style">
+			<li ng-repeat="quick in toolkit.content['quick-start']" 
+					layout="row" layout-align:"start start">
+
+				<h1 class="md-display-1 numeral">
+					{{ $index + 1 }}
+				</h1>
+
+				<div>
+					<p>
+						<md-button href="{{ quick.link.url }}" 
+											 target="_blank" 
+											 class="md-primary"
+											 layout="row" layout-align="start center"
+											 md-no-ink>
+
+							{{ quick.link.title }}
+							<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
+						</md-button>
+					</p>
+
+					<p class="md-body-1" 
+						 ng-bind-html="main.safeHtml(quick.description)"></p>
+				</div>
+			</li>
+		</ul>
+	</main>
+</section> <!-- quick start -->
+
+<section class="pro-tips" ng-if="toolkit.content['pro-tips'][0].description">
+	<header>
+		<h3 class="md-subhead">
+			Pro tips
+		</h3>
+	</header>
+
+	<main>
+		<ul class="no-style">
+			<li ng-repeat="tip in toolkit.content['pro-tips'] | orderBy:'-type'"
+				  ng-class="{good: tip.type == 'good', bad: tip.type == 'bad'}"
+				  layout-sm="column" layout-align-sm="center center"
+					layout="row" layout-align="start center">
+
+					<span>
+						<ng-md-icon icon="check" size="24" 
+												ng-if="tip.type == 'good'"></ng-md-icon>
+
+						<ng-md-icon icon="close" size="24" 
+												ng-if="tip.type == 'bad'"></ng-md-icon>
+					</span>
+
+					<p class="md-body-1" 
+						 ng-bind-html="main.safeHtml(tip.description)"></p>
+				</div>
+			</li>
+		</ul>
+	</main>
+</section> <!-- pro tips -->
+
+<footer class="links" ng-if="toolkit.content.links[0].title">
+	<header>
+		<h3 class="md-subhead" layout="row" layout-align="start center">
+			Helpful links
+			<ng-md-icon icon="open_in_new" size="20"></ng-md-icon>
+		</h3>
+	</header>
+
+	<main class="md-body-1">
+		<ul class="no-style">
+			<li ng-repeat="link in toolkit.content.links">
+				<a href="{{ link.url }}" target="_blank">
+					{{ link.title }}
+				</a>
+			</li>
+		</ul> <!-- links -->
+	</main>
+</footer>
