--- a/ng-index.html
+++ b/ng-index.html
@@ -25,7 +25,9 @@
 
 <header class="masthead">
   <h1 class="md-display-1 max-width">
-    HTML5 Toolkit
+    <span>
+      <img src="imgs/toolkit_logo_color.svg" border="0" />
+    </span>
   </h1>
 </header>
 
