--- a/ng-index.html
+++ b/ng-index.html
@@ -25,9 +25,10 @@
 
 <header class="masthead">
   <h1 class="md-display-1 max-width">
-    <span>
+    <span class="shadow"></span>
+    <a href="#/html5">
       <img src="imgs/toolkit_logo_color.svg" border="0" />
-    </span>
+    </a>
   </h1>
 </header>
 
