--- a/app/toolkit/_toolkit.html
+++ b/app/toolkit/_toolkit.html
@@ -1,4 +1,8 @@
-<section>
+<md-progress-circular md-mode="indeterminate" class="md-accent"
+                      ng-if="main.progress">
+</md-progress-circular>
+
+<section ng-if="!main.progress">
 	<header>
 		<h1 class="md-display-1">
 			{{ toolkit.content.title }}
@@ -17,7 +21,7 @@
 	</main>
 </section> <!-- title -->
 
-<section class="summary" ng-if="toolkit.content.description">
+<section class="summary" ng-if="toolkit.content.description && !main.progress">
 	<header>
 		<h3 class="md-subhead">
 			Summary
@@ -30,7 +34,7 @@
 	</main>
 </section> <!-- description -->
 
-<section class="demo block-color primary" ng-if="toolkit.content.demo[0].title">
+<section class="demo block-color primary" ng-if="toolkit.content.demo[0].title && !main.progress">
 	<header>
 		<h3 class="md-subhead">
 			Demo
@@ -56,7 +60,7 @@
 </section> <!-- demo -->
 
 <section class="quick-start block-color accent"
-				 ng-if="toolkit.content['quick-start'][0].description">
+				 ng-if="toolkit.content['quick-start'][0].description && !main.progress">
 
 	<header>
 		<h3 class="md-subhead">
@@ -94,7 +98,7 @@
 	</main>
 </section> <!-- quick start -->
 
-<section class="pro-tips" ng-if="toolkit.content['pro-tips'][0].description">
+<section class="pro-tips" ng-if="toolkit.content['pro-tips'][0].description && !main.progress">
 	<header>
 		<h3 class="md-subhead">
 			Pro tips
@@ -124,7 +128,7 @@
 	</main>
 </section> <!-- pro tips -->
 
-<footer class="links" ng-if="toolkit.content.links[0].title">
+<footer class="links" ng-if="toolkit.content.links[0].title && !main.progress">
 	<header>
 		<h3 class="md-subhead" layout="row" layout-align="start center">
 			Helpful links
