--- a/app/splash/_splash_tab2.html
+++ b/app/splash/_splash_tab2.html
@@ -4,14 +4,23 @@
 
 <section ng-if="!main.progress">
 	<main>	
-    <div class="blurb">
-      <h1 class="md-display-1">
-        Blurb headline
-      </h1>
+    <div class="blurb" 
+         layout-sm="column" layout-align-sm="start end"
+         layout="row" layout-align="start start">
 
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-      </p>
+      <div class="logo">
+        <img src="imgs/toolkit_logo_color.svg" border="0" />
+      </div>
+
+      <div class="text">
+        <h1 class="md-display-1">
+          Blurb headline
+        </h1>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+        </p>
+      </div>
     </div>
 
     <form name="search">
