post message to tell RMG new height

--- a/ng-index.html
+++ b/ng-index.html
@@ -42,7 +42,7 @@
   </h1>
 </header> -->
 
-<article class="max-width md-body-1" ng-view></article>
+<article id="container" class="max-width md-body-1" ng-view></article>
 
 <script src="app/_app.js"></script>
 <script src="app/splash/SplashController.js"></script>
