new blurb and auto styling in sass

--- a/app/splash/_splash_tab2.html
+++ b/app/splash/_splash_tab2.html
@@ -14,11 +14,11 @@
 
       <div class="text">
         <h1 class="md-display-1">
-          Blurb headline
+          The HTML5 Toolkit
         </h1>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+          The HTML5 Toolkit is a curated list of "instant-start" HTML5 resources. Whether you're a newcomer to HTML5 or a seasoned veteran, the Toolkit is a jumping off point enabling you to hit the ground running. Not meant to replace the Help Center or existing resources, the HTML5 Toolkit gives you what you need so you can get back to creating beautiful ads in a cross-screen world.
         </p>
       </div>
     </div>
