comment out search bar; pull in toolkit data from local json file downloaded from Firebase

--- a/app/splash/_splash_tab2.html
+++ b/app/splash/_splash_tab2.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <form name="search">
+    <!-- <form name="search">
       <md-input-container class="md-accent search-bar">
         <label>Search</label>
         <input name="search-toolkit-items" ng-model="searchToolkit"
@@ -31,7 +31,7 @@
 
         <ng-md-icon icon="search" size="24"></ng-md-icon>
       </md-input-container>
-    </form>
+    </form> -->
 
     <div class="categories">
       <md-card class="category-card" 
